--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ pytest==7.4.3
 pytest-mock==3.12.0
 pytest-cov==4.1.0
 ruff==0.1.6
+matplotlib==3.10.3
+seaborn==0.13.0
+# Note: tkinter is required for matplotlib but comes with Python installation
+# If missing, install via system package manager (e.g., apt-get install python3-tk)
